# src/routes/books/schemas.ts
@@ -3,7 +3,6 @@ import { z } from "@hono/zod-openapi";
 export const bookSchema = z.object({
 	id: z.number(),
 	title: z.string(),
-	subtitle: z.string().nullable(),
 	headline: z.string().nullable(),
 	slug: z.string().nullable(),
 	pageCount: z.number(),
@@ -11,7 +10,7 @@ export const bookSchema = z.object({
 	coverUrl: z.string(),
 	isbn10: z.string().length(10),
 	isbn13: z.string().length(13),
-	releaseDate: z.string(),
+	releaseDate: z.string().nullable(),
 	rating: z.number().nullable(),
 	tags: z.array(z.string()),
 	genres: z.array(z.string()),
